[metadata]
name=droneinterface
author=Thomas David
author_email=thomasdavid0@gmail.com
description=A tidy way to talk to a Drone through PyMavLink
long_description=file: readme.md
long_description_content_type = text/markdown
version=0.0.2
url=https://github.com/PyFlightCoach/DroneInterface
[options]
install_requires = 
    setuptools
packages=
    droneinterface